--- a/examples/config/markers/20210610_april.yaml
+++ b/examples/config/markers/20210610_april.yaml
@@ -9,13 +9,18 @@ hand_marker_names:
 - hand_left
 - hand_right
 finger_marker_names:
-    thumb: thumb_tip
-    index: index_tip
-    middle: middle_tip
-    ring: ring_tip
-    little: little_tip
+    thumb:
+    - thumb_tip
+    - thumb_middle
+    index:
+    - index_tip
+    middle:
+    - middle_tip
+    ring:
+    - ring_tip
+    little:
+    - little_tip
 additional_markers:
-- thumb_middle
 - index_middle
 - middle_middle
 - ring_middle
