--- a/examples/config/markers/20210520_april.yaml
+++ b/examples/config/markers/20210520_april.yaml
@@ -8,10 +8,14 @@ hand_marker_names:
 - hand_left
 - hand_right
 finger_marker_names:
-    thumb: thumb_tip
-    index: index_tip
-    middle: middle_tip
-    ring: ring_tip
+    thumb:
+    - thumb_tip
+    index:
+    - index_tip
+    middle:
+    - middle_tip
+    ring:
+    - ring_tip
 additional_markers:
 - index_middle
 - middle_middle
