--- a/examples/config/markers/20220328_april.yaml
+++ b/examples/config/markers/20220328_april.yaml
@@ -29,8 +29,8 @@ additional_markers:
 - middle_middle
 - ring_middle
 - little_middle
-- right_elbow
-- right_shoulder
+- elbow
+- shoulder
 - back_top
 - back_left
 - back_right
