--- a/examples/config/record_mapping/20220815_april_trha.yaml
+++ b/examples/config/record_mapping/20220815_april_trha.yaml
@@ -1,4 +1,3 @@
-# SSSA mocap glove setup
 pose_parameters_per_finger:
   thumb: [39, 40, 41, 42, 43, 44, 45, 46, 47]
   index: [3, 4, 5, 6, 7, 8, 9, 10, 11]
@@ -11,28 +10,28 @@ vertex_indices_per_finger:
   - 706  # middle
   index:
   - 314  # tip
-  - 212  # middle
+  - 261  # middle
   middle:
   - 426  # tip
-  - 365  # middle
+  - 388  # middle
   little:
   - 651  # tip
   - 627  # middle
   ring:
   - 534  # tip
-  - 477  # middle
+  - 509  # middle
 joint_indices_per_finger:
   thumb: [13, 14, 15]
   index: [1, 2, 3]
   middle: [4, 5, 6]
   ring: [10, 11, 12]
   little: [7, 8, 9]
-tip_vertex_offsets_per_finger:
-  thumb: [[0, 0, 0], [0, 0, 0]]
-  index: [[0, 0, 0], [0, 0, 0]]
-  middle: [[0, 0, 0], [0, 0, 0]]
-  ring: [[0, 0, 0], [0, 0, 0]]
-  little: [[0, 0, 0], [0, 0, 0]]
+tip_vertex_offsets_per_finger:  # marker radius: 0.006
+  thumb: [[0.003, 0.003, 0.003], [0.003, 0.003, 0.003]]
+  index: [[0, 0.007, 0], [0, 0.007, 0]]
+  middle: [[0, 0.007, 0], [0, 0.007, 0]]
+  ring: [[0, 0.007, 0], [-0.01, -0.002, -0.02]]
+  little: [[-0.009, 0.002, -0.005], [-0.01, -0.002, -0.015]]
 action_weights_per_finger:
   thumb:     # roll -l/+r -ext/+flex
       [[0.01, 0.01, 0.01,  # + positive
