--- a/examples/config/robot/20220907_april_mia_lateral.yaml
+++ b/examples/config/robot/20220907_april_mia_lateral.yaml
@@ -1,11 +1,17 @@
 handbase2robotbase:
-- -1.2860000133514404
-- 1.0679999589920044
-- -1.4730000495910645
-- -0.09600000083446503
-- 0.10000000149011612
-- 0.04100000113248825
-scale: 1.0
+- -1.5199999809265137
+- 0.7870000004768372
+- -1.7699999809265137
+- -0.10499999672174454
+- 0.06800000369548798
+- 0.050999999046325684
 kinematic_model_hook_args:
-  thumb_tip_to_thumb_fle: [0.015, 0.07, -0.015]
-  thumb_middle_to_thumb_fle: [0.02, 0.015, -0.015]
+  thumb_middle_to_thumb_fle:
+  - 0.02
+  - 0.015
+  - -0.015
+  thumb_tip_to_thumb_fle:
+  - 0.015
+  - 0.07
+  - -0.015
+scale: 1.0
