--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,14 @@
-numpy==1.22.2
+numpy~=1.20.3
 open3d==0.15.2
 pytransform3d==1.13.0
-pandas==1.2.2
-tqdm==4.56.2
-pytest==6.2.3
+pandas~=1.3.4
+tqdm~=4.62.3
+pytest~=6.2.4
 pybullet==3.2.1
-setuptools==52.0.0
-cython==0.29.23
-scipy==1.6.2
-pyyaml==5.4.1
-numba==0.53.1
+setuptools~=61.3.1
+cython~=0.29.24
+scipy~=1.7.1
+pyyaml~=6.0
+numba~=0.54.1
+
+yaml~=0.2.5
