--- a/examples/config/robot/20230505_april_mia.yaml
+++ b/examples/config/robot/20230505_april_mia.yaml
@@ -6,44 +6,14 @@ handbase2robotbase:
 - 0.11900000274181366
 - 0.027000000700354576
 kinematic_model_hook_args:
-  index_middle_to_index_fle:
-  - 0.01
-  - 0.035
-  - 0.0
-  index_tip_to_index_fle:
-  - -0.015
-  - 0.08
-  - 0.0
-  little_middle_to_little_fle:
-  - 0.005
-  - 0.035
-  - 0.0
-  little_tip_to_little_fle:
-  - -0.008
-  - 0.058
-  - 0.0
-  middle_middle_to_middle_fle:
-  - 0.01
-  - 0.035
-  - 0.0
-  middle_tip_to_middle_fle:
-  - -0.015
-  - 0.08
-  - 0.0
-  ring_middle_to_ring_fle:
-  - 0.007
-  - 0.035
-  - 0.0
-  ring_tip_to_ring_fle:
-  - -0.012
-  - 0.074
-  - 0.0
-  thumb_middle_to_thumb_fle:
-  - 0.03
-  - 0.02
-  - 0.0
-  thumb_tip_to_thumb_fle:
-  - 0.024
-  - 0.07
-  - 0.0
+  index_middle_to_index_fle: [0.02, 0.015, 0.0]
+  index_tip_to_index_fle: [-0.015, 0.09, 0.0]
+  little_middle_to_little_fle: [0.015, 0.015, 0.0]
+  little_tip_to_little_fle: [-0.01, 0.068, 0.0]
+  middle_middle_to_middle_fle: [0.02, 0.015, 0.0]
+  middle_tip_to_middle_fle: [-0.015, 0.09, 0.0]
+  ring_middle_to_ring_fle: [0.017, 0.015, 0.0]
+  ring_tip_to_ring_fle: [-0.012, 0.083, 0.0]
+  thumb_middle_to_thumb_fle: [0.03, 0.015, 0.0]
+  thumb_tip_to_thumb_fle: [0.03, 0.07, 0.0]
 scale: 1
